--- a/mesh_batching/Packages/manifest.json
+++ b/mesh_batching/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.timeline": "1.6.2",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.management": "4.2.1",
+    "com.unity.xr.oculus": "1.10.0",
     "com.unity.xr.openxr": "1.3.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
